Added new features and fixed redirection bugs and errors

--- a/spms/templates/core/my_leaves.html
+++ b/spms/templates/core/my_leaves.html
@@ -4,3 +4,4 @@
     <li>{{ leave.start_date }} to {{ leave.end_date }} - {{ leave.status }}</li>
   {% endfor %}
 </ul>
+<a href="{% url 'profile' %}" class="btn btn-secondary">← Back to Profile</a>
