--- a/spms/templates/core/leave_form.html
+++ b/spms/templates/core/leave_form.html
@@ -4,3 +4,4 @@
   {{ form.as_p }}
   <button type="submit">Submit</button>
 </form>
+<a href="{% url 'profile' %}" class="btn btn-secondary">← Back to Profile</a>
