--- a/spms/templates/core/register.html
+++ b/spms/templates/core/register.html
@@ -1,3 +1,10 @@
+{% if form.errors %}
+<div style="color: red;">
+  {{ form.errors }}
+</div>
+{% endif %}
+
+
 <h2>Register</h2>
 <form method="post">
     {% csrf_token %}
