--- a/spms/templates/registration/login.html
+++ b/spms/templates/registration/login.html
@@ -1,21 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Login</title>
-</head>
-<body>
+{% extends 'core/base.html' %}
+{% block content %}
+
+<div class="container mt-5" style="max-width: 400px;">
+  <h2 class="text-center mb-4">Login</h2>
 
   {% if form.errors %}
-    <div style="color: red;">
+    <div class="alert alert-danger">
       {{ form.errors }}
     </div>
   {% endif %}
 
-  <h2>Login</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button type="submit" class="btn btn-primary w-100">Login</button>
   </form>
-</body>
-</html>
+</div>
+
+{% endblock %}
